Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
 
-      <sectiomn>
+      <section>
 
         <figure>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
